corrections alignment

--- a/style.css
+++ b/style.css
@@ -432,17 +432,23 @@ footer {
 
 /*Nyhetsbrev uppdaterad */ 
 
-.news-section {
+.news-container {
   background-color: var(--clr-neutral-100);
+}
+
+.news-section {
+  max-width: 900px;
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2rem;
 
-
   @media screen and (min-width: 800px) {
       flex-direction: row-reverse;
+      justify-content: space-around;
   }
 }
 
@@ -472,9 +478,11 @@ footer {
 }
 
 .input-field {
-  border: none;
-  margin: 0 1rem;
   text-align: center;
+  background-color: var(--clr-neutral-100);
+  color: inherit;
+  border-radius: 15px;
+  border: 1px solid var(--clr-green-400);
 }
 
 .btn-send {
@@ -511,11 +519,13 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin: 0;
 }
 
 @container (min-width: 600px) {
 .news-text {
-  max-width: 80%;
+  max-width: 65%;
+  text-align: center;
   }
 }
 
@@ -524,18 +534,19 @@ footer {
   max-width: 1000px;
   width: 100%;
   margin-inline: auto;
-  padding: 1rem 2rem;
+  padding:2rem;
 }
 
 .card-grid {
   display: grid;
   grid-template-columns: 1fr;
+  row-gap: var(--clr-primary-light-1);
   
-
-
+  
   @media screen and (min-width: 600px) {
       grid-template-columns: repeat(2, 1fr);
       column-gap: 1rem;
+      row-gap: 1rem;
      
   }
   @media screen and (min-width: 800px) {
@@ -547,7 +558,6 @@ footer {
   background-color: var(--clr-neutral-100);
   box-shadow: var(--border-shadow);
   padding: 1rem;
-  
 }
 
 .card-inline-wrapper {
@@ -580,6 +590,7 @@ footer {
 
 .card-avatar {
   grid-area: 5 / 1 / 7 / 2;
+  align-self: flex-end;
 } 
 
 .card-avatar img {
@@ -680,14 +691,21 @@ footer {
   border: 3px solid var(--clr-fast);
 }
   /* Info section*/
-  .info-section {
+
+  .info-container {
     background-color: var(--clr-neutral-100);
+  }
+
+  .info-section {
     display: flex;
     flex-direction: column;  
     justify-content: center;
     align-items: center;
     gap: 1rem;
     padding: 2rem 5rem;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
   }
 
   @media screen and (min-width: 800px) {
@@ -734,12 +752,18 @@ footer {
 
   }
 
+  .footer-container {
+    background-color: var(--clr-green-400);
+  }
+
 .footer-flex {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     gap: 1rem;  
     padding: 4rem var(--padding-small) 2rem var(--padding-small);   
-    background-color: var(--clr-green-400);
     color: var(--clr-neutral-100);
 }
   
@@ -766,6 +790,10 @@ footer {
   align-items: center;
   gap: 0.5rem;
   }
+
+  .contact-phone:hover {
+    color: var(--clr-green-100);
+    }
   
   .contact-phone img {
   width: 16px;
@@ -776,6 +804,10 @@ footer {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  }
+
+  .contact-email:hover {
+    color: var(--clr-green-100);
   }
   
   .contact-email img {
@@ -790,11 +822,16 @@ footer {
     min-width: 40%;
   }
 
-
   .footer-right > ul > li {
     list-style: none;
     font-weight: 600;
     padding: .5rem;
+    transition: 2ms ease;
+}
+
+.footer-right > ul > li:hover {
+  color: var(--clr-green-400);
+  background-color: var(--clr-neutral-100);
 }
 
  /* Denna försvinner inte */ 
